--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,67 @@
                                         <a href="#" class="over-link"></a>
                                     </div>
                                 </div>
-                                
+                            </div>
+                            <div class="product-cat flexwrap">
+                                <div class="row">
+                                    <div class="item">
+                                        <div class="image">
+                                            <img src="assets/banner/procat1.jpg" alt="Women's Category">
+                                        </div>
+                                        <div class="content mini-links">
+                                            <h4>Beauty</h4>
+                                            <ul class="flexcol">
+                                                <li><a href="#">Makeup</a></li>
+                                                <li><a href="#">Skin Care</a></li>
+                                                <li><a href="#">Hair Care</a></li>
+                                                <li><a href="#">Fragrance</a></li>
+                                                <li><a href="#">Foot & Hand Care</a></li>
+                                            </ul>
+                                            <div class="second-links">
+                                                <a href="#" class="view-all">View all<i class="ri-arrow-right-line"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="item">
+                                        <div class="image">
+                                            <img src="assets/banner/procat2.jpg" alt="Women's Category">
+                                        </div>
+                                        <div class="content mini-links">
+                                            <h4>Gadgets</h4>
+                                            <ul class="flexcol">
+                                                <li><a href="#">Camera</a></li>
+                                                <li><a href="#">Cell Phone</a></li>
+                                                <li><a href="#">Computers</a></li>
+                                                <li><a href="#">GPS & Navigation</a></li>
+                                                <li><a href="#">Headphones</a></li>
+                                            </ul>
+                                            <div class="second-links">
+                                                <a href="#" class="view-all">View all<i class="ri-arrow-right-line"></i></a>
+                                            </div>
+                                        </div>                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="item">
+                                        <div class="image">
+                                            <img src="assets/banner/procat3.jpg" alt="Women's Category">
+                                        </div>
+                                        <div class="content mini-links">
+                                            <h4>Home Decor</h4>
+                                            <ul class="flexcol">
+                                                <li><a href="#">Kitchen</a></li>
+                                                <li><a href="#">Dining Room</a></li>
+                                                <li><a href="#">Pantry</a></li>
+                                                <li><a href="#">Great Room</a></li>
+                                                <li><a href="#">Breakfast Nook</a></li>
+                                            </ul>
+                                            <div class="second-links">
+                                                <a href="#" class="view-all">View all<i class="ri-arrow-right-line"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
